[project]
name = "projectmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "community>=1.0.0b1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "mcp[cli]>=1.27.0",
]
